refactor(core): 优化节点系统核心代码结构和空指针检查
- 移除AutoNodeScanner中的Collectors导入并简化流操作
- 重构CloneRegionNode中的区域计算逻辑，增加空值检查
- 优化FillRegionNode和ReplaceBlocksNode的体积计算方法
- 更新多个世界修改节点中的模式匹配语法
- 改进ImGuiNodeIO中的JSON处理逻辑
- 修复MenuBarRenderer中的变量初始化问题
- 统一使用isEmpty()方法替代size()比较
- 添加必要的@NotNull注解增强代码安全性